[project]
name = "knit-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.0",
    "langchain-groq>=1.0.0",
    "langgraph>=1.0.0",
    "langsmith>=0.4.37",
    "pydantic-settings>=2.12.0",
    "tavily-python>=0.7.17",
]
